WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249337
`font-variant-alternates: historical-forms` doesn't reflect properly via StylePropertyMap
https://bugs.webkit.org/show_bug.cgi?id=249337
Summary
`font-variant-alternates: historical-forms` doesn't reflect properly via Styl...
Chris Dumez
Reported
2022-12-14 14:10:12 PST
`font-variant-alternates: historical-forms` doesn't reflect properly via StylePropertyMap. Even though `historical-forms` is a supported keyword for this CSS property [1], we wouldn't get a CSSKeywordValue when reading the property value back. The issue is that we convert to a FontVariantAlternates internally and then back to a CSSValue. The function to convert back to a CSSValue (fontVariantAlternatesPropertyValue) was only handling the `normal` keyword but not the `historical-forms` one. [1]
https://w3c.github.io/csswg-drafts/css-fonts/#font-variant-alternates-prop
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2022-12-14 14:12:06 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7640
EWS
Comment 2
2022-12-15 13:54:16 PST
Committed
257955@main
(37f48652e37e): <
https://commits.webkit.org/257955@main
> Reviewed commits have been landed. Closing PR #7640 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-12-15 13:55:19 PST
<
rdar://problem/103417243
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug