`font-variant-alternates: historical-forms` doesn't reflect properly via StylePropertyMap https://bugs.webkit.org/show_bug.cgi?id=249337

Reviewed by Tim Nguyen.

`font-variant-alternates: historical-forms` doesn't reflect properly via
StylePropertyMap. Even though `historical-forms` is a supported keyword for
this CSS property [1], we wouldn't get a CSSKeywordValue when reading the
property value back. The issue is that we convert to a FontVariantAlternates
internally and then back to a CSSValue. The function to convert back to a
CSSValue (fontVariantAlternatesPropertyValue) was only handling the `normal`
keyword but not the `historical-forms` one.

[1] https://w3c.github.io/csswg-drafts/css-fonts/#font-variant-alternates-prop

* LayoutTests/imported/w3c/web-platform-tests/css/css-typed-om/the-stylepropertymap/properties/font-variant-alternates-expected.txt:
* Source/WebCore/css/ComputedStyleExtractor.cpp:
(WebCore::fontVariantAlternatesPropertyValue):

Canonical link: https://commits.webkit.org/257955@main